--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,13 +3,16 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
+  /*animation: App-logo-spin infinite 20s linear;*/
   height: 80px;
 }
 
 .App-header {
+  align-items: center;
   background-color: #222;
-  height: 150px;
+  display: flex;
+  height: 100px;
+  justify-content: center;
   padding: 20px;
   color: white;
 }
