--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -29,3 +29,9 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
