--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -1,3 +1,5 @@
+
+
 .app {
   display: flex;
   flex-direction: column;
@@ -14,6 +16,7 @@
 }
 
 .app-header {
+  @include shadow-down(false);
   align-items: center;
   background-color: #222;
   display: flex;
