--- a/src/styles/base/_app.scss
+++ b/src/styles/base/_app.scss
@@ -10,7 +10,13 @@
 
 .app-content {
   height: 100%;
+  overflow-y: auto;;
   padding: 1em 0;
+}
+
+.content-wrapper {
+  display: flex;
+  flex-direction: column;;
 }
 
 body {
