Created an example on how to use routes within routes, and how to create a custom icon directive for svg icons

--- a/src/styles/base/_footer.scss
+++ b/src/styles/base/_footer.scss
@@ -4,6 +4,21 @@
   background-color: $black;
   color: $white;
   display: flex;
-  height: 2em;
-  justify-content: space-around;
+  height: 3em;
+  justify-content: flex-end;
+
+  .footer-content {
+
+    .social-medias {
+      display: flex;
+    }
+  }
+
+  .social-icon {
+    color: $white;
+    cursor: pointer;
+    display: flex;
+    fill: $white;
+    margin-right: 1em;
+  }
 }
