--- a/src/styles/utils/_colors.scss
+++ b/src/styles/utils/_colors.scss
@@ -4,3 +4,9 @@ $black: #222;
 $white: #fff;
 
 $shadow-color: #a8a8a8;
+
+// Include brand guide colors:
+$light-blue: #00c8c8;
+$orange: #ff9800;
+$pink: #f52881;
+$purple: #7028b7;
