--- a/src/styles/base/_header.scss
+++ b/src/styles/base/_header.scss
@@ -1,15 +1,38 @@
 .header-logo {
-  height: 80px;
+  height: 60px;
 }
 
 .app-header {
   @include shadow-down(false);
   align-items: center;
-  background-color: $black;
   display: flex;
   height: 100px;
   justify-content: space-around;
   padding: 20px;
+
+  &.winter {
+    background: linear-gradient(to bottom right, $purple, $light-blue);
+
+    .header-button {
+      &:hover {
+        span {
+          color: $purple;
+        }
+      }
+    }
+  }
+
+  &.summer {
+    background: linear-gradient(to bottom right, $pink, $orange);
+
+    .header-button {
+      &:hover {
+        span {
+          color: $orange;
+        }
+      }
+    }
+  }
 
   .header-button {
     align-items: center;
@@ -32,11 +55,13 @@
     &:hover {
       background: $white;
       transition: background .2s;
+    }
+  }
 
-      span {
-        color: $black;
-        transition: color .2s;
-      }
+  .header-logo {
+    &:hover {
+      animation: rotateY 1s ease-out 0s 1;
+      animation-iteration-count: 1;
     }
   }
 
