--- a/src/styles/base/_header.scss
+++ b/src/styles/base/_header.scss
@@ -59,10 +59,7 @@
   }
 
   .header-logo {
-    &:hover {
-      animation: rotateY 1s ease-out 0s 1;
-      animation-iteration-count: 1;
-    }
+    animation: rotateY 2s infinite;
   }
 
   a {
