--- a/src/styles/base/_app.scss
+++ b/src/styles/base/_app.scss
@@ -9,14 +9,18 @@
 }
 
 .app-content {
+  display: flex;
   height: 100%;
-  overflow-y: auto;;
+  justify-content: center;
+  overflow-y: auto;
   padding: 1em 0;
 }
 
 .content-wrapper {
   display: flex;
-  flex-direction: column;;
+  flex-direction: column;
+  max-width: 960px;
+  width: 100%;
 }
 
 body {
