--- a/src/styles/utils/_grid.scss
+++ b/src/styles/utils/_grid.scss
@@ -2,27 +2,17 @@ $margin-size: 1em;
 
 .grid-two-columns {
   display: grid;
-  grid-template-columns: 50% 50%;
-
-  >div {
-    padding: 0 2em;
-    width: 100%;
-  }
+  grid-template-columns: repeat(2, 50%);
 }
 
 .grid-three-columns {
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: repeat(3, calc(100% / 3));
 }
 
 .grid-four-columns {
   display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
-
-  >div {
-    padding: 0 2em;
-    width: 100%;
-  }
+  grid-template-columns: repeat(4, 25%);
 }
 
 .margin-right {
