Brint the website up to 100 % accessibility score
- Add main landmark
- Add aria-label on image links for description
- Outline should never ever be removed, took it back.
- Winter/Summer theme converted to links to include into tabindex.

--- a/src/styles/base/_footer.scss
+++ b/src/styles/base/_footer.scss
@@ -9,7 +9,7 @@
   }
 
   &.summer {
-    background: linear-gradient(to top right, $pink, $orange)
+    background: linear-gradient(to top right, $pink, $orange);
   }
 
   .footer-content {
@@ -22,7 +22,8 @@
 
     .themes {
       .theme-button {
-        cursor: pointer;
+        color: $white;
+        text-decoration: none;
         margin-right: 1em;
       }
     }
